@@ -500,6 +500,12 @@ typedef struct _addrxlat_param_linear {
 /** Page table entry format.
  */
 typedef enum _addrxlat_pte_format {
+	/** Invalid PTE format value.
+	 * It may be returned by the library on error.
+	 * Use @c ADDRXLAT_PTE_NONE if the format is merely unknown.
+	 */
+	ADDRXLAT_PTE_INVALID = -1,
+
 	ADDRXLAT_PTE_NONE,	/**< Undefined. */
 	ADDRXLAT_PTE_PFN32,	/**< 32-bit page frame number. */
 	ADDRXLAT_PTE_PFN64,	/**< 64-bit page frame number. */
@@ -518,6 +524,23 @@ typedef enum _addrxlat_pte_format {
 	/** Arm AArch64 with LPA2 (4k or 16k pages). */
 	ADDRXLAT_PTE_AARCH64_LPA2,
 } addrxlat_pte_format_t;
+
+/** Get the (string) name of a PTE format.
+ * @param fmt  PTE format.
+ * @returns    The (human-readable) name of the address space,
+ *             or @c NULL if unknown.
+ */
+const char *addrxlat_pte_format_name(addrxlat_pte_format_t fmt);
+
+/** Get a PTE format enum value by name.
+ * @param name  PTE name.
+ * @returns     PTE format, or @c ADDRXLAT_PTE_INVALID if @p name is
+ *              not recognized.
+ *
+ * The name is not case-sensitive, e.g. "AARCH64", "AArch64" and "aarch64"
+ * are handled the same.
+ */
+addrxlat_pte_format_t addrxlat_pte_format(const char *name);
 
 /** Get the pteval shift for a PTE format.
  * @param fmt  PTE format.
